# django-file_exchange

./: .coveragerc  .djlintrc  .flake8  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  ci_config.toml  conftest.py  mypy.ini  pyproject.toml  pytest.ini  tbump.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
file_exchange/: __init__.py  apps.py  models.py  tasks.py  views.py
file_exchange/templates/file_exchange/: download_status.html  download_status_display.html
file_exchange/templatetags/: __init__.py  file_exchange_extras.py
file_exchange/tests/: conftest.py  test_file_exchange.py  test_settings.py  test_views.py
file_exchange/tests/testapp/: factories.py  models.py  urls.py  views.py
file_exchange/tests/testapp/migrations/: 0001_initial.py
