[tool.poetry]
name = "file_exchange"
version = "0.1.0"
description = "Django file upload and download manager."
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Django = "^3.2.4"
celery = "^5.2.1"
django-celery-results = "^2.1.0"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
black = "^21.12b0"
pytest = "^6.2.4"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"
factory-boy = "^3.2.0"
pytest-factoryboy = "^2.1.0"
pytest-celery = "^0.0.0"
pytest-djangoapp = "^0.15.1"
flake8-docstrings = "^1.6.0"
mypy = "^0.910"
django-stubs = "^1.8.0"
celery-types = "^0.9.3"
lxml = "^4.6.4"
typed-ast = ">=1.4.0,<1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
