[tool.poetry]
name = "file_exchange"
version = "0.1.1"
description = "Django file upload and download manager."
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = ">=4.0"
celery = ">=5.2.3"
setuptools = "^69.4.0"

[tool.poetry.dev-dependencies]
black = ">=22.1"
pytest = ">=6.2.4"
isort = ">=5.10.1"
flake8 = ">=4.0.1"
pytest-cov = ">=3.0.0"
factory-boy = ">=3.2.0"
pytest-factoryboy = ">=2.1.0"
pytest-celery = ">=0.0.0"
pytest-djangoapp = ">=0.15.1"
flake8-docstrings = ">=1.6.0"
mypy = ">=0.931"
django-stubs = ">=1.8.0"
celery-types = ">=0.11.0"
lxml = ">=4.7.1"
typed-ast = ">=1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"